--- a/docs/树/2-讲透树 | 树的遍历复盘专题.md
+++ b/docs/树/2-讲透树 | 树的遍历复盘专题.md
@@ -164,7 +164,7 @@ N叉树的写法是，利用 `for` 循环，依次递归孩子结点。
 
 先来简单回顾一下，传统的打印方式。
 
-<img src="./img/2-讲透树 | 树的遍历复盘专题-2.png" style="zoom:50%;" />
+![2-讲透树 | 树的遍历复盘专题-2](./img/2-讲透树 | 树的遍历复盘专题-2.png)
 
 跟着上述图中的描述，动手画一下就会明白特别的简单。
 
@@ -214,7 +214,7 @@ while queue:
 
 「点击下图查看高清原图」👇
 
-![树层次遍历LeetCode要求方式](./img/2-树层次遍历LeetCode要求方式.jpg)
+![2-树层次遍历LeetCode要求方式](./img/2-树层次遍历LeetCode要求方式.jpg)
 
 上图是以二叉树进行举例子，其实和 N叉树的逻辑几乎是一致的，咱们先来看二叉树的相关核心代码：
 
