--- a/docs/树/2-讲透树 | 树的遍历复盘专题.md
+++ b/docs/树/2-讲透树 | 树的遍历复盘专题.md
@@ -1,10 +1,12 @@
-[toc]
 
 
+大家好，我是Johngo！
+
+一起刷 LeetCode 以及对刷题感兴趣的小伙伴们，咱们今天对「树」的**遍历**做一个总结，主要是有关N叉树以及层次结点信息打印所注意不到的地方，一起来探究一下。
 
 ## 1 前言
 
-大家好，「树」的刷题已经有一段时间了。
+对「树」相关题目的刷题已经有一段时间了。
 
 一来二去时间上有所拖延。之前总结过「树」的基础遍历，这一篇来具体题目看看，对于基础遍历能遇到哪些问题。
 
