--- a/docs/树/1-讲透树 | 树的基础遍历专题.md
+++ b/docs/树/1-讲透树 | 树的基础遍历专题.md
@@ -349,7 +349,7 @@ class Solution:
 
 下面借助一幅图来描述其遍历过程：
 
-![image-20200419224825863](/Users/yaojianguo/Library/Mobile Documents/com~apple~CloudDocs/ScienceSpace/C-language/DataStructure/6.Tree/img/5.二叉树的层次遍历.jpg)
+![](./img/1-1经典层序遍历.jpg)
 
 这样是不是很清晰，有时候会觉得这种长图会比动图好看一些，能清晰看到每一步，而且中间可以有很详细的解释。关于图像展示方面大家可以给出参考意见，这方面确实可以更进一步。
 
