--- a/docs/树/3-讲透树 | 自顶向下类别题目专题.md
+++ b/docs/树/3-讲透树 | 自顶向下类别题目专题.md
@@ -60,9 +60,11 @@ while queue:
         queue.appendleft(node.right)
 ```
 
-现在想要抛出几个问题，看是否可以很容易就解答。
+现在想要抛出 2 个问题，看是否可以很容易就解答。
 
-> 问题一：遍历过程中能否记录根结点到当前结点的一些信息
+### 问题一
+
+> 遍历过程中能否记录根结点到当前结点的一些信息？
 >
 > 包括：
 >
@@ -90,12 +92,99 @@ while queue:
     node, node_path, node_val = queue.pop()
     res.append((node, node_path, node_val))
     if node.left:
-        queue.appendleft(node.left)
+        queue.appendleft((node.left, node_path+str(node.left), node_val+node.left.val))
     if node.right:
-        queue.appendleft(node.right)
+        queue.appendleft((node.right, node_path+str(node.right), node_val+node.right.val))
 ```
 
-这样，
+这样，在遍历过程中，就会将三元组的信息随时携带。完美解决！
+
+
+
+### 问题二
+
+> 能否在层序遍历过程中，携带一个值进行层序的记录?
+
+<img src="./img/3-3bfs图解1.png" style="zoom:50%;" />
+
+对，就是这样，利用一个额外的变量来记录层序。
+
+这个的思路，其实很容易就让我想到之前二叉树按照 LeetCode 形式打印的一个过程（不太记得的小伙伴可以查看mpmpmpmpmpmpmm 回忆下关于LeetCode的层序遍历）
+
+下面我又把 LeetCode 中要求层次遍历的图解过程放出来，作为回忆参考！
+
+「点击下图查看高清原图」👇
+
+![2-树层次遍历LeetCode要求方式](./img/2-树层次遍历LeetCode要求方式.jpg)
+
+即，在每一层遍历的时候，进行 `node_depth+=1` 的操作。先来看最初代码的样子（还。。记得吗？）：
+
+```python
+def levelOrder(self, root):
+    res = []
+    if not root:
+        return res
+    queue = [root]
+    while queue:
+        level_queue = []      # 临时记录每一层结点
+        level_res = []        # 临时记录每一行的结点值
+        for node in queue:
+            level_res.append(node.val)
+            if node.left:
+                level_queue.append(node.left)
+            if node.right:
+                level_queue.append(node.right)
+        queue = level_queue
+        res.append(level_res)
+    return res
+```
+
+每一层的遍历，都是 queue 被赋予新的一个队列 level_queue，即新的一层的所有结点集。
+
+在此思路的基础上
+
+> 首先，初始化变量用作记录层序值 `node_depth = 0`
+>
+> 其次，在每一次`while queue:` 之后进行 `node_depth+=1` 
+>
+> 最后 `node_depth` 的值就是你想要的某一层的值
+
+看代码小改动后的实现
+
+```python
+def levelOrder(self, root):
+    res = []
+    # 层序记录
+    node_depth = 0
+    if not root:
+        return res
+    queue = [root]
+    while queue:
+	      node_depth += 1				# 层序值+1
+        level_queue = []
+        level_res = []
+        for node in queue:
+            level_res.append(node.val)
+            if node.left:
+                level_queue.append(node.left)
+            if node.right:
+                level_queue.append(node.right)
+        queue = level_queue
+        res.append(level_res)
+    return res
+```
+
+对，不要找了，就是有注释的那两行，只不过要取的 `node_depth` 的值是你所需要的那个值。
+
+比如说，最大深度的计算，那就是最后 `node_depth` 的值；如果是根结点到某一结点路径和你给到的 `target` 值一致的时候的那个深度，那就是被满足结点所在层序的  `node_depth` 。
+
+好！
+
+两个重要的问题被引出来，有没有什么感觉，是不是比较简单的一个思路。下面就来看看这些简单思路，能处理哪些问题！
+
+LeetCode 第
+
+
 
 
 
