--- a/docs/树/4-讲透树 | 非自顶向下专题复盘.md
+++ b/docs/树/4-讲透树 | 非自顶向下专题复盘.md
@@ -26,6 +26,8 @@
 
 直观的先看看本文的所处的一个进度
 
+![](./img/4-1讲透树进度.png)
+
 <img src="./img/4-1讲透树进度.png" style="zoom:30%;" />
 
 相比较于「自顶向下」的题目，「非自顶向下」的题目相比较下来不太适合用 BFS 来解决，非常适合于用 DFS 来解决。而且相较于「自顶向下」的题目，「非自顶向下」的题目难度会大一点。
