--- a/docs/动态规划/动态规划-买卖股票系列.md
+++ b/docs/动态规划/动态规划-买卖股票系列.md
@@ -62,7 +62,7 @@ hello，我是 Johngo！
 
 举例：股票每天的价格 prices = [7, 1, 5, 3, 6, 4] 
 
-![](./img/股票-1.png)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-1.png)
 
 
 
@@ -106,9 +106,9 @@ hello，我是 Johngo！
 
 下面，用一个长图进行一步一步把上述的二维数组填满：
 
-![](./img/股票-2-1.jpg)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-2-1.jpg)
 
-![](./img/股票-2-2.jpg)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-2-2.jpg)
 
 因为要取最优利润值。所以，卖掉股票后才能有最大利润，除非，一次都没有交易。
 
@@ -195,7 +195,7 @@ def maxProfit_opt(self, prices):
 
 举例：股票每天的价格 prices = [7, 1, 5, 3, 6, 4] 
 
-![](./img/股票-1.png)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-1.png)
 
 
 
@@ -239,9 +239,9 @@ def maxProfit_opt(self, prices):
 
 下面，依然用一个长图进行一步一步把上述的二维数组填满：
 
-![](./img/股票-3-1.png)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-3-1.png)
 
-![](./img/股票-3-2.png)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-3-2.png)
 
 最后拿到 `dp[0]`的最后一个元素就是最大利润值，因为不持股手中的利润就是多的情况。
 
@@ -331,7 +331,7 @@ def maxProfit_opt(self, prices):
 
 根据案例，定义 dp 数组为 3 行 6 列。
 
-![image-20210829235008384](/Users/yaojianguo/Library/Mobile Documents/com~apple~CloudDocs/ScienceSpace/DataScienceML/LeetCode/题目纲要Code/share_leetcode/docs/动态规划/img/股票-4.png)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-4.png)
 
 
 
@@ -339,7 +339,7 @@ def maxProfit_opt(self, prices):
 
 和之前的有点不一样
 
-动态方程：`dp[i][j]=max{dp[i][j-1], max{prices[i]-prices[n]+dp[i-1][n]}}, n=0,1,…,j-1`
+动态方程：`dp[i][j]=max{dp[i][j-1], max{prices[j]-prices[n]+dp[i-1][n]}}, n=0,1,…,j-1`
 
 看起来很复杂，公式复杂，其实思路还是比较简单。
 
@@ -359,11 +359,11 @@ def maxProfit_opt(self, prices):
 
 【建议查看高清图片或者直接到 github 进行读取】
 
-![](./img/股票-6.png)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-6.png)
 
 **注意，以上红框中也是要取最大值，对应动态方程中的第二个max。下面所有图示均符合此规律。**
 
-![](./img/股票-5.png)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-5.png)
 
 上述步骤中，只填写了第 `i=1` 这一行。
 
@@ -371,7 +371,7 @@ def maxProfit_opt(self, prices):
 
 下面再把第 `i=2` 这一行填完，大家的思路会更加清晰起来。
 
-![](./img/股票-7.png)
+![](https://johngo-pic.oss-cn-beijing.aliyuncs.com/20210905-leetcode%E8%82%A1%E7%A5%A8%E4%B9%B0%E5%8D%96/%E8%82%A1%E7%A5%A8-7.png)
 
 这一顿操作，我简直差点要放弃了。
 
@@ -497,10 +497,3 @@ def maxProfit(self, k, prices):
 《买卖股票的最佳时机》系列题目详细的进行了解释，后面还有其他的股票相关题目，但基本是基于今天文章的思路进行解决的。
 
 刷题计划已经进行了有一段时间，需要一起来搞的，加我微信，我拉你进群哈！
-
-
-
-
-
-
-
