--- a/docs/树/1-讲透树 | 树的基础遍历专题.md
+++ b/docs/树/1-讲透树 | 树的基础遍历专题.md
@@ -8,7 +8,7 @@
 
 LeetCode树提计划开始有几天了。
 
-今天对「树」的进度做一个简短的小结，群里亲爱的小伙伴进行的怎么样了呢？我这边预计在整个「树」的阶段，预计会进行四个小结以及一个完整的复盘，所以，应该是 5 份总结资料。
+今天对「树」的进度做一个简短的小结，群里亲爱的小伙伴进行的怎么样了呢？我这边预计在整个「树」的阶段，预计会进行四个全面的小结。
 
 分布如下：
 
@@ -16,7 +16,8 @@ LeetCode树提计划开始有几天了。
 * 模块1：**基础遍历**，对LeetCode中进行刷题标记
 * 模块2：遍历变种-自顶向下，对这些题目进行解释和代码编写
 * 模块3：遍历变种-非自顶向下，同样也是对这些题目进行解释和代码编写
-* 最终的复盘总结「最重要」
+
+  
 
 还是把咱们的计划列出来：
 
@@ -127,7 +128,7 @@ def post_order_traverse(root):
 
 
 
-### 1
+###  1
 
 **先序遍历**
 
