--- a/docs/树/1-讲透树 | 树的基础遍历专题.md
+++ b/docs/树/1-讲透树 | 树的基础遍历专题.md
@@ -21,7 +21,7 @@ LeetCode树提计划开始有几天了。
 
 还是把咱们的计划列出来：
 
-![刷题路线图](./img/刷题路线图.png)
+![](../算法与LeetCode路线安排.png)
 
 所以，今天会是先序、中序、后续、层次遍历的基础代码编写
 
@@ -102,7 +102,7 @@ queue.pop(0)
 
 咱们这里用后续遍历举例子，其他递归方式自己烧脑理解哈！
 
-<img src="./img/树的遍历-1.png" style="zoom:30%;" />
+![ ](img/1-树的遍历-1.png)
 
 核心代码（以下用**代码1、2、3、4**来表示每一行）：
 
@@ -144,7 +144,7 @@ c. 先序遍历其右子树；
 
 下图是一棵二叉树，我们来手动模拟一下遍历过程
 
-<img src="/Users/yaojianguo/Library/Mobile Documents/com~apple~CloudDocs/ScienceSpace/C-language/DataStructure/6.Tree/img/2.二叉树的先序遍历(递归和非递归)-1.png" style="zoom:50%;" />
+![ ](img/1-树的遍历-2.png)
 
 按照上图中描述，根据顺序能够得到它的一个先序遍历的过程，得到先序遍历序列：
 
@@ -213,7 +213,7 @@ c. 先序遍历其**右子树**；
 
 下图是一棵二叉树，我们来手动模拟一下中序遍历过程
 
-![](/Users/yaojianguo/Library/Mobile Documents/com~apple~CloudDocs/ScienceSpace/C-language/DataStructure/6.Tree/img/3.二叉树的中序遍历(递归和非递归)-1.png)
+![ ](img/1-树的遍历-3.png)
 
 按照上述中序遍历的递归过程，得到中序遍历序列：
 
@@ -279,7 +279,7 @@ c. 访问**根节点**；
 
 下图是一棵二叉树，我们来手动模拟一下后序遍历过程
 
-![image-20200419164544031](/Users/yaojianguo/Library/Mobile Documents/com~apple~CloudDocs/ScienceSpace/C-language/DataStructure/6.Tree/img/4.二叉树的后序遍历(递归和非递归)-1.png)
+![ ](img/1-树的遍历-4.png)
 
 按照上述后序遍历的过程，得到后序遍历序列：
 
@@ -312,7 +312,9 @@ c. 判断 T 是否有左右孩子，如果有依次入栈 s1，否则，执行 b
 
 下面借助图，还是一样的树结构，来梳理一下思路（长图发放，耐心看完，看完之后会发现思路很清晰）：
 
-<img src="/Users/yaojianguo/Library/Mobile Documents/com~apple~CloudDocs/ScienceSpace/C-language/DataStructure/6.Tree/img/4.二叉树的后序遍历(递归和非递归)-2.jpg" style="zoom:50%;" />
+![ ](img/1-树的遍历-5.jpg)
+
+
 
 有了这个思路就应该会很清晰了，下面就按照这个思维逻辑来编写代码：
 
@@ -350,7 +352,7 @@ class Solution:
 
 下面借助一幅图来描述其遍历过程：
 
-![](./img/1-1经典层序遍历.jpg)
+![ ](img/1-树的遍历-6.jpg)
 
 这样是不是很清晰，有时候会觉得这种长图会比动图好看一些，能清晰看到每一步，而且中间可以有很详细的解释。关于图像展示方面大家可以给出参考意见，这方面确实可以更进一步。
 
@@ -383,7 +385,7 @@ class Solution:
 
 3.下期进行【基础遍历】中LeetCode题目罗列以及利用树递归的方式，会产生一些计算树相关的变形问题
 
-注：后面会把代码放到github中，今天可以后台回复「树」进行代码获取哈！
+github地址：https://github.com/xiaozhutec/share_leetcode
 
 
 
