--- a/docs/树/2-讲透树 | 树的遍历复盘专题.md
+++ b/docs/树/2-讲透树 | 树的遍历复盘专题.md
@@ -14,7 +14,7 @@
 
 围绕，前中后序遍历对于N叉树的适用性，已经层序遍历不同的打印方式，有哪些注意点。
 
-<img src="./img/2-树-遍历总结-1.png" alt="image-20210719223503897" style="zoom:50%;"/>
+![ ](img/2-树的遍历-1.png)" 
 
 题目如下：
 
@@ -166,7 +166,7 @@ N叉树的写法是，利用 `for` 循环，依次递归孩子结点。
 
 先来简单回顾一下，传统的打印方式。
 
-![2-讲透树 | 树的遍历复盘专题-2](./img/2-讲透树 | 树的遍历复盘专题-2.png)
+![ ](img/2-树的遍历-2.png)
 
 跟着上述图中的描述，动手画一下就会明白特别的简单。
 
@@ -216,7 +216,7 @@ while queue:
 
 「点击下图查看高清原图」👇
 
-![2-树层次遍历LeetCode要求方式](./img/2-树层次遍历LeetCode要求方式.jpg)
+![](img/2-树的遍历-3.jpg)
 
 上图是以二叉树进行举例子，其实和 N叉树的逻辑几乎是一致的，咱们先来看二叉树的相关核心代码：
 
