--- a/docs/树/3-讲透树 | 自顶向下类别题目专题.md
+++ b/docs/树/3-讲透树 | 自顶向下类别题目专题.md
@@ -17,7 +17,7 @@
 还是直观的先看看本文的所处的一个进度。
 
 
-![](./img/3-1自顶向下类别题目专题.png)
+![ ](img/3-树的遍历-1.png)
 
 基本上，绝大多数关于「树」的题目，会有很大一类属于「自顶向下」类型的。
 
@@ -51,7 +51,7 @@ BFS（Breadth First Search）：广度优先搜索
 
 回忆一下经典二叉树的层序遍历问题，把需要的图放出来先看看。
 
-![](./img/1-1经典层序遍历.jpg)
+![ ](img/3-树的遍历-2.jpg)
 
 很简单的一个过程。循环判断队列 queue 中是否有元素，如果有，访问该元素并且判断该结点元素是否有孩子结点，如果有，孩子结点依次入队 queue，否则，继续循环执行。
 
@@ -84,7 +84,7 @@ while queue:
 
 把上述图中结点中的字母对应为数字，达到**引例一**中的要求情况，看下图：
 
-<img src="./img/3-2bfs图解.png" style="zoom:50%;" />
+![](img/3-树的遍历-3.png)
 
 在遍历过程中，不断的进行结点值【**包括结点对象、根结点到当前结点路径、根结点到当前结点路径和**】的记录。
 
@@ -118,7 +118,7 @@ while queue:
 
 > 能否在层序遍历过程中，携带一个值进行层序的记录?
 
-<img src="./img/3-3bfs图解1.png" style="zoom:50%;" />
+![](img/3-树的遍历-4.png)
 
 对，就是这样，利用一个额外的变量来记录层序。
 
@@ -128,7 +128,7 @@ while queue:
 
 「点击下图查看高清原图」👇
 
-![2-树层次遍历LeetCode要求方式](./img/2-树层次遍历LeetCode要求方式.jpg)
+![ ](img/3-树的遍历-5.jpg)
 
 即，在每一层遍历的时候，进行 `node_depth+=1` 的操作。先来看最初代码的样子（还。。记得吗~？）：
 
@@ -242,7 +242,7 @@ LeetCode112题目是从根结点到叶子结点，是否存在路径和为 `targ
 
 如下图，如果咱们要找路径和为 `target=16` 的一个路径，利用「引例一」中的思路，很容易就可以判断，在最后一个结点中的三元组 `(9, 1->2->4->9, 16)` 中能够得到路径为 `1->2->4->9`。
 
-<img src="./img/3-2bfs图解.png" style="zoom:40%;" />
+![](img/3-树的遍历-6.png)
 
 代码实现起来也很容易
 
@@ -274,7 +274,7 @@ def hasPathSum_bfs(self, root, targetSum):
 
 就是要把所有从根结点开始到叶子结点所有的路径遍历出来。其实还是「引例一」中的思路，当遍历到叶子结点的时候，将所有叶子结点中的三元组中的路径值取出。例如叶子结点 `(9, 1->2->4->9, 16)` 中的路径为 `1->2->4->9`取出。
 
-<img src="./img/3-2bfs图解2.png" style="zoom:40%;" />
+![](img/3-树的遍历-7.png)
 
 可以得到一个路径集合：
 
@@ -314,7 +314,7 @@ def binaryTreePaths_bfs(self, root):
 
 这个题目依然延续了「引例一」中的思路，就是将路径中的数字一次记录，转为数字，进行相加。
 
-<img src="./img/3-2bfs图解2.png" style="zoom:40%;" />
+![](img/3-树的遍历-8.png)
 
 举例说，图中路径分别为`[[1->3->6], [1->3->7], [1->2->4->8], [1->2->4->9]]`，对应的数字为 [10, 11, 15, 16]，那么，数字之和为 `10+11+15+16=52`。
 
