--- a/docs/树/4-讲透树 | 非自顶向下专题复盘.md
+++ b/docs/树/4-讲透树 | 非自顶向下专题复盘.md
@@ -26,7 +26,7 @@
 
 直观的先看看本文的所处的一个进度
 
-<img src="./img/4-1讲透树进度.png" style="zoom:30%;" />
+![](img/4-树的遍历-1.png)
 
 相比较于「自顶向下」的题目，「非自顶向下」的题目相比较下来不太适合用 BFS 来解决，非常适合于用 DFS 来解决。而且相较于「自顶向下」的题目，「非自顶向下」的题目难度会大一点。
 
@@ -137,7 +137,7 @@ def longestUnivaluePath_dfs(self, root):
 
 这个题目有很关键的一点是`self.length = max(self.length, left_tag + right_tag)`，由于题目不要求一定经过根结点。那么，此时如果左孩子的结点值和根结点的结点值以及右孩子的结点值和根结点的结点值都相同，此时会是下面的一种情况。
 
-<img src="./img/4-2.png" style="zoom:50%;" />
+![](img/4-树的遍历-2.png)
 
 谈论红色框内的结点：
 
