--- a/docs/树/二叉树的序列化和反序列化.md
+++ b/docs/树/二叉树的序列化和反序列化.md
@@ -24,7 +24,7 @@
 
 下图对应前序遍历的序列化结果 6!88!10!#!#!#!92!11!22!#!#!9!#!#!12!#!#! ：
 
-<img src="./img/二叉树的序列化和反序列化-1.png" style="zoom:30%;" /> 
+![](img/6-树的遍历-1.png)
 
 
 
