--- a/docs/树/打印树的层号以及每层的结点信息.md
+++ b/docs/树/打印树的层号以及每层的结点信息.md
@@ -21,7 +21,7 @@
 
 要求按照下面的格式将树信息打印出来，看着很是直观的打印结果
 
-<img src="./img/打印树的层号以及每层的结点信息-2.png" style="zoom:50%;" />
+![ ](img/5-树的遍历-1.png)
 
 **要求输出格式**
 
@@ -69,7 +69,7 @@ class TreeNode:
 
 具体细节流程，看下面[长长长长长...]图
 
-![](./img/打印树的层号以及每层的结点信息-1.png)
+![ ](img/5-树的遍历-2.png)
 
 以上，基于给定的树状结构进行了细致的说明，供大家参考。另外个人不太喜欢动图，原因是想要看清楚每一步的时候，不容易控制
 
@@ -324,5 +324,4 @@ D				  	E        F
 ---------------------
 打印 F E D C B A
 ```
-
 
